force-app/main/default/objects/Account/fields/FederalTaxId__c.field-meta.xml
<CustomField>
    <fullName>FederalTaxId__c</fullName>
    <externalId>true</externalId>
    <label>FederalTaxId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>