force-app/main/default/objects/Account/validationRules/FractionalFederalTaxId.validationRule-meta.xml
<ValidationRule>
    <fullName>FractionalFederalTaxId</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS(FederalTaxId__c , &quot;.&quot;)</errorConditionFormula>
    <errorDisplayField>FederalTaxId__c</errorDisplayField>
    <errorMessage>Federal Tax Id should be integer</errorMessage>
</ValidationRule>