force-app/main/default/objects/Account/validationRules/IncorrectSizeFederalTaxId.validationRule-meta.xml
<ValidationRule>
    <fullName>IncorrectSizeFederalTaxId</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(FederalTaxId__c) &lt;&gt; 8</errorConditionFormula>
    <errorDisplayField>FederalTaxId__c</errorDisplayField>
    <errorMessage>Federal Tax Id should be eight-digit!</errorMessage>
</ValidationRule>