force-app/main/default/objects/Account/validationRules/IncorrectTypeFederalTaxId.validationRule-meta.xml
<ValidationRule>
    <fullName>IncorrectTypeFederalTaxId</fullName>
    <active>false</active>
    <errorConditionFormula>NOT (
 ISNUMBER(FederalTaxId__c) 
)</errorConditionFormula>
    <errorDisplayField>FederalTaxId__c</errorDisplayField>
    <errorMessage>Federal Tax Id should be type of Number</errorMessage>
</ValidationRule>