force-app/main/default/objects/Account/validationRules/NegativeFederalTaxId.validationRule-meta.xml
<ValidationRule>
    <fullName>NegativeFederalTaxId</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS(FederalTaxId__c  , &quot;-&quot;)</errorConditionFormula>
    <errorDisplayField>FederalTaxId__c</errorDisplayField>
    <errorMessage>Federal Tax Id should be positive!</errorMessage>
</ValidationRule>